<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.test.codelab41droidcafe.MainActivity">
    <item
        android:id="@+id/action_order"
        android:orderInCategory="10"
        android:title="@string/order"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_cart_info"/>
    <item
        android:id="@+id/action_contact"
        android:orderInCategory="100"
        android:title="@string/contact"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_status"
        android:orderInCategory="20"
        android:title="@string/status"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_status_info"/>
    <item
        android:id="@+id/action_favorites"
        android:orderInCategory="30"
        android:title="@string/favorites"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_favorite_info"/>

</menu>
